Fixed shadow bug & added tooltip for truncated text in Agents General

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -239,7 +239,7 @@ div.uil-ring-css {
     box-shadow: none;
 }
 
-:focus:not(.wazuh-button):not(.input-filter-box) {
+:focus:not(.wazuh-button):not(.input-filter-box):not(.kuiLocalSearchInput) {
     box-shadow: none !important;
 }
 
